Add Minerva OSINT

--- a/general-info.html
+++ b/general-info.html
@@ -300,6 +300,22 @@
                 invaluable tool for OSINT investigations and awareness of online
                 threats.
               </p>
+              <h3>12. Minerva OSINT</h3>
+              <a
+                href="https://minervaosint.com/" target="_blank"
+                >https://minervaosint.com</a
+              >
+              <p>
+                Minerva OSINT is an email search tool that finds and
+                aggregates data on a target email from over a hundred websites.
+              </p>
+              <p>
+                Minerva OSINT searches online services to try and find
+                profiles and registered accounts for a given email.
+                Collected information can include usernames, full
+                names, avatar URLs, profile URLs, and other
+                platform-specific information.
+              </p>
             </div>
           </div>
         </div>
